[package]
name = "pebble"
version = "0.1.0"
edition = "2021"
authors = ["Justin Sibonga <justinmarlosibonga@gmail.com>"]
description = "A lightweight Rust ORM built on top of rusqlite"
license = "MIT"
repository = "https://github.com/Justin322322/pebble"

[dependencies]
rusqlite = "0.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "basic_usage"
path = "examples/basic_usage.rs"

[[example]]
name = "query_builder"
path = "examples/query_builder.rs"

